// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParallelGateway Continues on all paths 1`] = `
Array [
  Object {
    "elementId": "StartEvent_1",
    "lanes": undefined,
    "participant": undefined,
    "state": "ready",
  },
  Object {
    "elementId": "StartEvent_1",
    "lanes": undefined,
    "participant": undefined,
    "state": "active",
  },
  Object {
    "elementId": "StartEvent_1",
    "lanes": undefined,
    "participant": undefined,
    "state": "complete",
  },
  Object {
    "elementId": "ParallelGateway_1dy6xai",
    "lanes": undefined,
    "participant": undefined,
    "state": "ready",
  },
  Object {
    "elementId": "ParallelGateway_1dy6xai",
    "lanes": undefined,
    "participant": undefined,
    "state": "active",
  },
  Object {
    "elementId": "ParallelGateway_1dy6xai",
    "lanes": undefined,
    "participant": undefined,
    "state": "complete",
  },
  Object {
    "elementId": "Task_1bjr67q",
    "lanes": undefined,
    "participant": undefined,
    "state": "ready",
  },
  Object {
    "elementId": "Task_1bjr67q",
    "lanes": undefined,
    "participant": undefined,
    "state": "active",
  },
  Object {
    "elementId": "Task_1bjr67q",
    "lanes": undefined,
    "participant": undefined,
    "state": "complete",
  },
  Object {
    "elementId": "ParallelGateway_0vuadku",
    "lanes": undefined,
    "participant": undefined,
    "state": "ready",
  },
  Object {
    "elementId": "Task_10jy1w4",
    "lanes": undefined,
    "participant": undefined,
    "state": "ready",
  },
  Object {
    "elementId": "Task_10jy1w4",
    "lanes": undefined,
    "participant": undefined,
    "state": "active",
  },
  Object {
    "elementId": "Task_10jy1w4",
    "lanes": undefined,
    "participant": undefined,
    "state": "complete",
  },
  Object {
    "elementId": "ParallelGateway_0vuadku",
    "lanes": undefined,
    "participant": undefined,
    "state": "ready",
  },
  Object {
    "elementId": "ParallelGateway_0vuadku",
    "lanes": undefined,
    "participant": undefined,
    "state": "active",
  },
  Object {
    "elementId": "ParallelGateway_0vuadku",
    "lanes": undefined,
    "participant": undefined,
    "state": "complete",
  },
  Object {
    "elementId": "EndEvent_13nsh2q",
    "lanes": undefined,
    "participant": undefined,
    "state": "ready",
  },
  Object {
    "elementId": "EndEvent_13nsh2q",
    "lanes": undefined,
    "participant": undefined,
    "state": "active",
  },
  Object {
    "elementId": "EndEvent_13nsh2q",
    "lanes": undefined,
    "participant": undefined,
    "state": "complete",
  },
]
`;

exports[`ParallelGateway Runs services in parallel 1`] = `
Array [
  Object {
    "elementId": "StartEvent_1",
    "lanes": undefined,
    "participant": undefined,
    "state": "ready",
  },
  Object {
    "elementId": "StartEvent_1",
    "lanes": undefined,
    "participant": undefined,
    "state": "active",
  },
  Object {
    "elementId": "StartEvent_1",
    "lanes": undefined,
    "participant": undefined,
    "state": "complete",
  },
  Object {
    "elementId": "Task_0rnu0cc",
    "lanes": undefined,
    "participant": undefined,
    "state": "ready",
  },
  Object {
    "elementId": "Task_0rnu0cc",
    "lanes": undefined,
    "participant": undefined,
    "state": "active",
  },
  Object {
    "elementId": "Task_0rnu0cc",
    "lanes": undefined,
    "participant": undefined,
    "state": "complete",
  },
  Object {
    "elementId": "ParallelGateway_03c6fwo",
    "lanes": undefined,
    "participant": undefined,
    "state": "ready",
  },
  Object {
    "elementId": "ParallelGateway_03c6fwo",
    "lanes": undefined,
    "participant": undefined,
    "state": "active",
  },
  Object {
    "elementId": "ParallelGateway_03c6fwo",
    "lanes": undefined,
    "participant": undefined,
    "state": "complete",
  },
  Object {
    "elementId": "Task_0z13d9i",
    "lanes": undefined,
    "participant": undefined,
    "state": "ready",
  },
  Object {
    "elementId": "Task_0z13d9i",
    "lanes": undefined,
    "participant": undefined,
    "state": "active",
  },
  Object {
    "elementId": "Task_0z13d9i",
    "lanes": undefined,
    "participant": undefined,
    "state": "complete",
  },
  Object {
    "elementId": "ParallelGateway_0jwxcj8",
    "lanes": undefined,
    "participant": undefined,
    "state": "ready",
  },
  Object {
    "elementId": "Task_1ro3bn5",
    "lanes": undefined,
    "participant": undefined,
    "state": "ready",
  },
  Object {
    "elementId": "Task_1ro3bn5",
    "lanes": undefined,
    "participant": undefined,
    "state": "active",
  },
  Object {
    "elementId": "Task_1ro3bn5",
    "lanes": undefined,
    "participant": undefined,
    "state": "complete",
  },
  Object {
    "elementId": "ParallelGateway_0jwxcj8",
    "lanes": undefined,
    "participant": undefined,
    "state": "ready",
  },
  Object {
    "elementId": "ParallelGateway_0jwxcj8",
    "lanes": undefined,
    "participant": undefined,
    "state": "active",
  },
  Object {
    "elementId": "ParallelGateway_0jwxcj8",
    "lanes": undefined,
    "participant": undefined,
    "state": "complete",
  },
  Object {
    "elementId": "Task_0ihlvap",
    "lanes": undefined,
    "participant": undefined,
    "state": "ready",
  },
  Object {
    "elementId": "Task_0ihlvap",
    "lanes": undefined,
    "participant": undefined,
    "state": "active",
  },
  Object {
    "elementId": "Task_0ihlvap",
    "lanes": undefined,
    "participant": undefined,
    "state": "complete",
  },
  Object {
    "elementId": "EndEvent_15k76o1",
    "lanes": undefined,
    "participant": undefined,
    "state": "ready",
  },
  Object {
    "elementId": "EndEvent_15k76o1",
    "lanes": undefined,
    "participant": undefined,
    "state": "active",
  },
  Object {
    "elementId": "EndEvent_15k76o1",
    "lanes": undefined,
    "participant": undefined,
    "state": "complete",
  },
]
`;
